--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "paddy-color-theme",
 	"displayName": "Paddy Color Theme",
-	"description": "A set of very detailed color themes with earthy tones for all ye badass hackers. 🎄🍁🪓",
-	"version": "1.10.1",
+	"description": "A set of very detailed color themes with earthy tones for all ye badass hackers.",
+	"version": "1.10.2",
 	"publisher": "yile-ou",
 	"author": {
 		"name": "Yile Ou",
