--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "paddy-color-theme",
-	"displayName": "Paddy Color Theme",
+	"displayName": "Paddy Color Themes",
 	"description": "A set of very detailed color themes with earthy tones for all ye badass hackers.",
-	"version": "1.11.8",
+	"version": "1.11.9",
 	"publisher": "yile-ou",
 	"author": {
 		"name": "Yile Ou",
